starting implementing the computation of metrics per frame

--- a/configs/process_run_config.yaml
+++ b/configs/process_run_config.yaml
@@ -20,7 +20,7 @@ logging:
 # can be expanded, if many dim reduction methods will be implemented, consider creating a separate config for it
 # ==========================
 reduction:
-  method: tsne            # Options: tsne, umap, etc., 
+  method: tsne            # Options: tsne, isomap, etc., 
   perplexity: 50
 
 
@@ -32,8 +32,8 @@ data:
   crops_name: clips_ir108_100x100_8frames_2013-2020 # name of the dataset, TODO implement the case with more runs
   file_extension: nc   # Options: nc, tif
   nc_engine: netcdf4   #engine for xarray, choose between {"netcdf4", "scipy", "pydap", "h5netcdf", "zarr", None}
-  sampling_type: all   # Options: random, closest, farthest, all
-  n_subsample: None #70072   # Max samples per cluster. TODO: if 'all', use all samples without specifying here
+  sampling_type: closest   # Options: random, closest, farthest, all
+  n_subsample: 1000 #70072   # Max samples per cluster. TODO: if 'all', use all samples without specifying here
   filter_daytime: false  # Keep only 06–16 UTC
   filter_imerg: false    # Keep only timestamps at minutes 00 or 30, as IMERG product (set to true only if precipitation is used and n_frames==1)
   n_frames: 8 # Number of frames to consider for each crop
@@ -46,19 +46,18 @@ data:
 statistics:
   spatial:
     sel_vars:
-      - cot
       - cth
       - cma
+      - cot
       - cph
-      - sat_prec
-    percentiles: [50, 99]
-    deviations: [std, iqr]
-    categorical: true
-    
+      #- sat_prec
+      #- lightning
+    percentiles: [50, 99, 25, 75]  # percentiles to compute (IQR can be derived from 25 and 75)
+    #TODO implement something to evalaute the cloud organization (Iorg, spectral analysis, aspect_ratio, aggregation...)
+
     # NEW: control whether spatial metrics are per-frame or aggregated
-    mode: 
-      - per_frame      # compute metrics at each timestep separately
-      - aggregated     # collapse all frames into one distribution
+    mode: per_frame      # compute metrics at each timestep separately (then this can be also used to check the change in time of the spatial metrics)
+      #- aggregated     # collapse all frames into one distribution
 
 
   # Time-development statistics (multi-frame evolution across time dimension)
@@ -71,7 +70,7 @@ statistics:
       - motion_direction     # azimuth angle of displacement vector
     options:
       normalize_by_duration: true   # normalize Δ by total time length
-      convective_ref: "max_cth"     # how to define "cloud center" (max_cth, centroid, mask_com)
+      convective_ref: "max_cth"     # how to define "cloud center" (max_cth, center_of_mass, ...)
 
   # General flags
   include_geotime: true      # Include geospatial and temporal metadata (month, hour, lat_mid, lon_mid)
