--- a/configs/process_run_config.yaml
+++ b/configs/process_run_config.yaml
@@ -46,11 +46,11 @@ data:
 statistics:
   spatial:
     sel_vars:
-      - cth
-      - cma
-      - cot
-      - cph
-      #- sat_prec
+      # - cth
+      # - cma
+      # - cot
+      # - cph
+      - precipitation
       #- lightning
     percentiles: [50, 99, 25, 75]  # percentiles to compute (IQR can be derived from 25 and 75)
     #TODO implement something to evalaute the cloud organization (Iorg, spectral analysis, aspect_ratio, aggregation...)
@@ -73,7 +73,7 @@ statistics:
       convective_ref: "max_cth"     # how to define "cloud center" (max_cth, center_of_mass, ...)
 
   # General flags
-  include_geotime: true      # Include geospatial and temporal metadata (month, hour, lat_mid, lon_mid)
+  include_geotime: false      # Include geospatial and temporal metadata (month, hour, lat_mid, lon_mid)
   time_dimension: true       # Global flag: whether time metrics should be computed at all
   use_parallel: false        # Parallelization (logging issue with joblib)
   n_cores: 4                 # Number of CPU cores
